# BSI

./: .gitignore  README.md
2020/1/SMA0508-mat_discreta/Atividade3/: Respostas.old.tex  Respostas.tex
2020/1/SMA0508-mat_discreta/Lista2/: Respostas.tex
2020/1/SSC0501-icc/Projeto1/: projeto.c
2020/1/SSC0501-icc/Projeto2/: projeto.c
2020/1/SSC0501-icc/Projeto3/: projeto.c
2020/1/SSC0501-icc/Projeto4/: projeto.c
2020/1/SSC0501-icc/Projeto5/: 1.txt  2.txt  projeto.c
2020/1/SSC0501-icc/Projeto6/: projeto6.c
2020/1/SSC0501-icc/Prova1/: 1.c  2.c  3.c  4.c
2020/1/SSC0502-lab_icc/Prova_ex6/: 6.c
2020/1/SSC0512-elem_logica_digital/Lab06/: Exercicio.circ
2020/1/SSC0530-intro_si/atividade05/: atividade.tex  bibliografia.bib
2020/1/SSC0530-intro_si/atividade06/: atividade.tex
2020/1/SSC0530-intro_si/atividade07/: atividade.tex
2020/2/SCC5929-sem_web/oblig1/: simpsons.ttl
2020/2/SCC5929-sem_web/oblig2/: Cargo.toml  README.md  simpsons.ttl
2020/2/SCC5929-sem_web/oblig3/: .gitignore  Cargo.toml  README.md  exercise_1.rq  exercise_2.rq  exercise_3.rq  exercise_4.rq  exercise_5.rq  exercise_6.rq  exercise_7.rq
2020/2/SCC5929-sem_web/oblig3/src/: cli.rs  main.rs
2020/2/SMA0501-calculo_1/ATR-Extra/: respostas.tex
2020/2/SMA0501-calculo_1/ATR1/: respostas.tex
2020/2/SMA0501-calculo_1/ATR3/: respostas.tex
2020/2/SMA0501-calculo_1/ATR4/: respostas.tex
2020/2/SMA0501-calculo_1/ATR5/: respostas.tex
2020/2/SMA0501-calculo_1/ATR7/: respostas.tex
2020/2/SMA0501-calculo_1/ATR9/: respostas.tex
2020/2/SMA0501-calculo_1/P1/: respostas.tex
2020/2/SMA0501-calculo_1/P2/: respostas.tex
2020/2/SSC0531-gestao_si/: 3108-tipos_de_si.tex
2021/1/SCC0503-algoritmos_e_estrutura_de_dados_ii/brabalog/: Makefile  README.md  pom.xml  shell.nix
2021/1/SCC0503-algoritmos_e_estrutura_de_dados_ii/btree/: .gitignore  Makefile  shell.nix
2021/1/SCC0503-algoritmos_e_estrutura_de_dados_ii/indices_primarios/: .gitignore  Makefile  shell.nix
2021/1/SCC0503-algoritmos_e_estrutura_de_dados_ii/quests/: Makefile  README.md  pom.xml  shell.nix
2021/1/SCC0503-algoritmos_e_estrutura_de_dados_ii/warmup/: .gitignore  Makefile
2021/1/SCC0503-algoritmos_e_estrutura_de_dados_ii/warmup_reload/: .gitignore  Makefile
2021/1/SCC0504-programacao_orientada_a_objetos/aula01/: README.md
2021/1/SCC0504-programacao_orientada_a_objetos/aula01/ex1/: Cargo.toml
2021/1/SCC0504-programacao_orientada_a_objetos/aula01/ex1/src/: lib.rs  main.rs
2021/1/SCC0504-programacao_orientada_a_objetos/aula01/ex1/src/phone/: communication.rs  cpu.rs  mod.rs  sound.rs  touchscreen.rs
2021/1/SCC0504-programacao_orientada_a_objetos/aula02/: README.md  ex3.mmd
2021/1/SCC0504-programacao_orientada_a_objetos/aula02/ex5/: Cargo.toml
2021/1/SCC0504-programacao_orientada_a_objetos/aula02/ex5/src/: character.rs  hero.rs  lib.rs  main.rs  power.rs  villain.rs
2021/1/SCC0504-programacao_orientada_a_objetos/aula03/: README.md
2021/1/SCC0504-programacao_orientada_a_objetos/aula03/ex3/: Cargo.toml
2021/1/SCC0504-programacao_orientada_a_objetos/aula03/ex3/src/: bicycle.rs  building.rs  car.rs  carbonfootprint.rs  lib.rs  main.rs
2021/1/SCC0504-programacao_orientada_a_objetos/aula04/: README.md
2021/1/SCC0504-programacao_orientada_a_objetos/aula04/ex04/: Cargo.toml
2021/1/SCC0504-programacao_orientada_a_objetos/aula04/ex04/src/: lib.rs  main.rs  stack.rs  test.rs
2021/1/SCC0504-programacao_orientada_a_objetos/aula05/: README.md
2021/1/SCC0504-programacao_orientada_a_objetos/aula05/ex02/: CMakeLists.txt
2021/1/SCC0504-programacao_orientada_a_objetos/aula05/ex02/lib/ComplexNumber/: CMakeLists.txt
2021/1/SCC0504-programacao_orientada_a_objetos/aula05/ex02/lib/ComplexNumber/include/: complex_number.hpp
2021/1/SCC0504-programacao_orientada_a_objetos/aula05/ex02/lib/ComplexNumber/src/: complex_number.cpp
2021/1/SCC0504-programacao_orientada_a_objetos/aula05/ex02/src/: main.cpp
2021/1/SCC0504-programacao_orientada_a_objetos/aula05/ex04b/: CMakeLists.txt
2021/1/SCC0504-programacao_orientada_a_objetos/aula05/ex04b/lib/Devices/: CMakeLists.txt
2021/1/SCC0504-programacao_orientada_a_objetos/aula05/ex04b/lib/Devices/include/: devices.hpp
2021/1/SCC0504-programacao_orientada_a_objetos/aula05/ex04b/lib/Devices/src/: devices.cpp
2021/1/SCC0504-programacao_orientada_a_objetos/aula05/ex04b/src/: main.cpp
2021/1/SCC0504-programacao_orientada_a_objetos/aula06/: README.md
2021/1/SCC0504-programacao_orientada_a_objetos/aula06/ex07/: Cargo.toml
2021/1/SCC0504-programacao_orientada_a_objetos/aula06/ex07/src/: main.rs
2021/1/SCC0504-programacao_orientada_a_objetos/aula08/: README.md  shell.nix
2021/1/SCC0504-programacao_orientada_a_objetos/aula09/: README.md
2021/1/SCC0504-programacao_orientada_a_objetos/aula10/: README.md
2021/1/SCC0504-programacao_orientada_a_objetos/aula10/ex01/: CMakeLists.txt
2021/1/SCC0504-programacao_orientada_a_objetos/aula10/ex01/lib/Pair/: CMakeLists.txt
2021/1/SCC0504-programacao_orientada_a_objetos/aula10/ex01/lib/Pair/include/: pair.hpp
2021/1/SCC0504-programacao_orientada_a_objetos/aula10/ex01/src/: main.cpp
2021/1/SCC0504-programacao_orientada_a_objetos/aula10/ex02/: CMakeLists.txt
2021/1/SCC0504-programacao_orientada_a_objetos/aula10/ex02/lib/Stack/: CMakeLists.txt
2021/1/SCC0504-programacao_orientada_a_objetos/aula10/ex02/lib/Stack/include/: stack.hpp
2021/1/SCC0504-programacao_orientada_a_objetos/aula10/ex02/src/: main.cpp
2021/1/SCC0504-programacao_orientada_a_objetos/projeto1/: documentacao.tex
2021/1/SCC0504-programacao_orientada_a_objetos/projeto1/codigo/: Cargo.toml
2021/1/SCC0504-programacao_orientada_a_objetos/projeto1/codigo/src/: block.rs  enemy.rs  gamescreen.rs  hero.rs  item.rs  levels.rs  lib.rs  lives.rs  main.rs  sprites.rs  text.rs  tile.rs
2021/1/SCC0505-introducao_a_teoria_da_computacao/P1/: 1b.jff  2a.jff  3a.jff  3c.jff
2021/1/SCC0505-introducao_a_teoria_da_computacao/P2/: .latexmkrc  Q1P2.jff  Q2P2.jff  Q3P2.jff  shell.nix
2021/1/SCC0560-interacao_usuario_computador/: relatorio.tex
(+301 files in other folders)
