[package]
name = "oblig3"
version = "0.1.0"
authors = ["Gabriel Fontes <g.fontes@usp.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxigraph = "^0.1.1"
anyhow = "^1.0.32"
clap = { version =  "3.0.0-beta.2", features = ["wrap_help", "color"]}
prettytable-rs = "^0.8"
