[package]
name = "aula01-ex1"
description = "Lista da matéria SCC0504 - Exercício 1"
version = "0.1.0"
authors = ["Gabriel Fontes <g.fontes@usp.br", "Vinicius Baca <viniciusfbaca@usp.br"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
