[package]
name = "aula03-ex3"
description = "Lista 3 da matéria SCC0504 - Exercício 3"
version = "0.1.0"
authors = ["Gabriel Fontes <g.fontes@usp.br", "Vinicius Baca <viniciusfbaca@usp.br"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
