[package]
name = "lista04-ex4"
description = "Lista 4 da matéria SCC0504 - Exercício 4"
version = "0.1.0"
authors = ["Gabriel Fontes <g.fontes@usp.br", "Vinicius Baca <viniciusfbaca@usp.br"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
