[package]
name = "projeto1"
version = "0.1.0"
authors = ["Gabriel Fontes <eu@misterio.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"

[dependencies.bevy]
version = "0.5"
default-features = false
features = ["bevy_wgpu", "bevy_winit", "render", "png", "x11"]
